--- a/directive/public/indextab.html
+++ b/directive/public/indextab.html
@@ -1,18 +1,18 @@
 <!-- 底部tab栏 -->
 <div class="mjh-sy-tab">
-    <a href="#/shujia" class="mjh-sy-tabt">
+    <a href="#/shujia/1" ng-class="{true:'mjh-sy-tabt active',false:'mjh-sy-tabt'}[id==1]"> 
         <img src="images/mjh/sy-mjh_83.png" alt="" />
         <p>书架</p>
     </a>
-    <a href="#/" class="mjh-sy-tabt">
+    <a href="#/" ng-class="{true:'mjh-sy-tabt active',false:'mjh-sy-tabt'}[id==undefined]">
         <img src="images/mjh/sy-mjh_86.png" alt="" />
         <p>书库</p>
     </a>
-    <a href="#/shequ" class="mjh-sy-tabt">
+    <a href="#/shequ/3" ng-class="{true:'mjh-sy-tabt active',false:'mjh-sy-tabt'}[id==3]">
         <img src="images/mjh/sy-mjh_77.png" alt="" />
         <p>社区</p>
     </a>
-    <a href="#/me" class="mjh-sy-tabt">
+    <a href="#/me/4" ng-class="{true:'mjh-sy-tabt active',false:'mjh-sy-tabt'}[id==4]">
         <img src="images/mjh/sy-mjh_80.png" alt="" />
         <p>账户</p>
     </a>
